User cannot bacnkrouting

--- a/src/templates/admin_dashboard.html
+++ b/src/templates/admin_dashboard.html
@@ -199,6 +199,7 @@
                         <th>total_duration</th>
                         <th>news</th>
                         <th>startup_set</th>
+                        <th>completion_code</th>
                         <th>investment_duration</th>
                         <th>invest_amounts</th>
                         <th>invest_approach</th>
@@ -219,6 +220,7 @@
                         <td>{{ r.total_time_survey_minutes }}</td>
                         <td>{{ r.story_type }}</td>
                         <td>{{ r.startup_code }}</td>
+                        <td>{{r.completion_code }}</td>
                         <td>{{ r.startup_investment_duration }}</td>
                         <td>{{ r.startup_investments }}</td>
                         <td>{{ r.investment_approach }}</td>
