--- a/src/templates/attentioncheck_1.html
+++ b/src/templates/attentioncheck_1.html
@@ -86,7 +86,24 @@
         
     </style>
 
-    <script>
+    <!-- Add the JavaScript here -->
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+        
         function countWords(text) {
             return text.trim().split(/\s+/).filter(word => word.length > 0).length;
         }
