--- a/src/templates/demographic.html
+++ b/src/templates/demographic.html
@@ -86,7 +86,23 @@
         
     </style>
 
-    <script>
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+        
         function toggleOtherInput(groupName, inputId) {
             const selected = document.querySelector(`input[name="${groupName}"]:checked`);
             const inputBox = document.getElementById(inputId);
