--- a/src/templates/educating.html
+++ b/src/templates/educating.html
@@ -164,7 +164,23 @@
     </div>
     </div>
 
-    <script>
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+        
         // Options for prospect question
         const prospectOptions = [
             { id: "profitable", value: "profitable", label: "It is highly probable that a start-up with a new idea will become profitable." },
