--- a/src/templates/final_page.html
+++ b/src/templates/final_page.html
@@ -108,6 +108,24 @@
             text-align: center;
         }
     </style>
+
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+    </script>
 </head>
 
 <body>
