--- a/src/templates/investment_approach.html
+++ b/src/templates/investment_approach.html
@@ -86,7 +86,23 @@
         
     </style>
 
-    <script>
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+        
         function countWords(text) {
             return text.trim().split(/\s+/).filter(word => word.length > 0).length;
         }
