--- a/src/templates/investment_multi.html
+++ b/src/templates/investment_multi.html
@@ -322,7 +322,23 @@
         }
     </script>
 
-    <script>
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+        
         // Toggle visibility of the formula
         function toggleFormula() {
             const formula = document.getElementById("investmentFormula");
