--- a/src/templates/investment_reflect_likert.html
+++ b/src/templates/investment_reflect_likert.html
@@ -89,6 +89,25 @@
             text-align: right;
         }
     </style>
+
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+    </script>
+    
 </head>
 
 <body>
