--- a/src/templates/news_info.html
+++ b/src/templates/news_info.html
@@ -171,7 +171,23 @@
             return true;
         }
     </script> -->
-    <script>
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+        window.onload = function() {
+            // Hide the warning initially
+            document.getElementById('warning').style.display = 'none';
+            noBack();
+        };
+        window.onpageshow = function (evt) {
+            if (evt.persisted) noBack();
+        };
+        window.onunload = function () {
+            void (0);
+        };
+        
         function validateNewsAnswer() {
             const selectedOption = document.querySelector('input[name="news_answer"]:checked');
             const correctAnswer = document.getElementById("correct_answer").value;
