Updated instructions, startup data, kept one control photo, updated price and added completion code

--- a/src/templates/attentioncheck_1.html
+++ b/src/templates/attentioncheck_1.html
@@ -161,11 +161,14 @@
                         
                         <hr />
 
-                        <p class="mb-4">Please share <strong>at least 15 words</strong> in the box below describing your opinion on
-                            the idea of <strong>shortening the work week</strong>. Your response will not impact your eligibility to participate in this study.</p>
-                        <!--
-                        <p class="mt-3 mb-3 text-muted fst-italic">Please type at least 15 real words and avoid copy-pasting or entering gibberish.</p>
-                        -->
+                        <p class="mb-4">Please share in the box below <strong>your opinion</strong> on
+                            the idea of <strong>shortening the work week</strong>. The stance you express will not impact your 
+                            eligibility to participate in this study.</p>
+                        
+                        <p class="mt-3 mb-3 text-muted fst-italic">Please write <strong>at least 15 words</strong> using complete, coherent sentences. 
+                            Avoid copying and pasting, or entering gibberish. 
+                            You will be able to click the arrow button to continue once you've typed the minimum number of words.</p>
+                        
                         {% if error %}
                         <div class="text-danger mb-4 text-center fw-bold">
                             {{ error }}
