--- a/src/templates/demographic.html
+++ b/src/templates/demographic.html
@@ -154,10 +154,10 @@
                                         id="genderOther" onchange="toggleOtherInput('gender', 'genderOtherBox')">
                                     <label class="form-check-label" for="genderOther">Other</label>
                                 </div>
-                                <div id="genderOtherBox" class="mt-2 d-none">
+                                <!-- <div id="genderOtherBox" class="mt-2 d-none">
                                     <input type="text" class="form-control" name="gender_other"
                                         placeholder="Please specify">
-                                </div>
+                                </div> -->
                             </div>
 
                             <!-- Age -->
@@ -194,9 +194,9 @@
                                         id="eduOther" onchange="toggleOtherInput('education', 'educationOtherBox')">
                                     <label class="form-check-label" for="eduOther">Other</label>
                                 </div>
-                                <div id="educationOtherBox" class="mt-2 d-none">
+                                <!-- <div id="educationOtherBox" class="mt-2 d-none">
                                     <input type="text" class="form-control" name="education_other"
-                                        placeholder="Please specify">
+                                        placeholder="Please specify"> -->
                                 </div>
                             </div>
 
