--- a/src/templates/investment_approach.html
+++ b/src/templates/investment_approach.html
@@ -157,7 +157,9 @@
                         <p class="mt-3 "><strong> Please briefly explain in the box below 
                             the approach you used when allocating your investment funds among the start-ups in the portfolio.</strong> </p>
 
-                        <p class="mt-5 text-muted fst-italic">Please write <strong>least 15 words</strong> using coherent sentences to express your thoughts.</p>
+                        <p class="mt-5 text-muted fst-italic">Please write <strong>at least 15 words</strong> using complete, coherent sentences to
+                        express your thoughts. You will be able to click the arrow button to continue once you've typed the minimum number of words.</p>
+
                         {% if error %}
                         <div class="text-danger mb-4 text-center fw-bold">
                             {{ error }}
