--- a/src/templates/investment_multi.html
+++ b/src/templates/investment_multi.html
@@ -246,7 +246,7 @@
 
                     {% for startup in startups %}
                     <div class="startup-card">
-                    <div class="startup-title">{{ startup.Startup_name or "Unnamed Startup" }}</div>
+                    <div class="startup-title">{{ startup.Order or "Unnamed Start-up" }}</div>
 
                     <div>
                         <span class="section-label">Industry:</span>
