--- a/src/templates/news_info.html
+++ b/src/templates/news_info.html
@@ -224,7 +224,7 @@
                  class="img-fluid mb-4 mx-auto d-block"
                  alt="News Image">
                 
-            <p class="news-source">News and image source: {{ news_source }}</p>
+            <p class="news-source">Source: {{ news_source }}</p>
 
             <p class="news-content">{{ news_content }}</p>
 
