--- a/src/templates/thank_you.html
+++ b/src/templates/thank_you.html
@@ -109,7 +109,7 @@
         function downloadCode() {
             const code = "{{ completion_code }}";
             const prolificId = "{{ prolific_id }}";
-            const content = `Survey 16-digit completion code: ${code}\nProlific ID: ${prolificId}\nProlific completion code: CODETOINPUT`;
+            const content = `Survey 16-digit completion code: ${code}\nProlific ID: ${prolificId}\nProlific completion code: C3CB5BBT`;
             const blob = new Blob([content], { type: "text/plain" });
             const link = document.createElement("a");
             link.href = URL.createObjectURL(blob);
@@ -154,7 +154,7 @@
                             </div>
                         
                             <div>
-                                <strong>Prolific completion code:</strong><br> CODETOINPUT
+                                <strong>Prolific completion code:</strong><br> C3CB5BBT
                             </div>
                         </div>
 
