Added intention guess

--- a/src/templates/demographic.html
+++ b/src/templates/demographic.html
@@ -200,6 +200,15 @@
                                 </div>
                             </div>
 
+                            <!-- Guess intention -->
+                             <div class="mb-5">
+                                <label class="form-label"><strong>If you had to guess, what would you say is the purpose of this experiment?</strong></label>
+                                <div class="mb-4">
+                                    <textarea class="form-control" id="guess_intention" name="guess_intention" rows="3"
+                                    oninput="validateInput()"></textarea>
+                                </div>
+                            </div>
+
 
                             <div class="submit-btn-container">
                                 <button type="submit" class="btn custom-btn">
